--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,21 +1,48 @@
-.header-container {
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
+
+@media only screen and (min-width: 600px) {
+  .header-container {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 30px;
+    padding: 15px;
+  }
+
+  .header__title {
+    text-align: center;
+    width: 300px;
+    font-size: 30px;
+  }
+  
+  .header__logo {
+    width: 300px;
+    font-size: 50px;
+  }
+}
+
+.mobile__title-icon {
+  position: fixed;
+  top: 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
-  margin-bottom: 30px;
-  padding: 15px;
+  justify-content: center;
   background-color: whitesmoke;
+  width: 100%;
+  z-index: 1;
 }
 
 .header__title {
-  text-align: center;
-  width: 300px;
-  font-size: 30px;
+  font-family: 'Barlow', sans-serif;
+  margin-left: 8px;
+  font-size: 25px;
 }
 
 .header__logo {
-  width: 300px;
+  width: 30px;
+  margin: 5px;
   font-size: 50px;
 }
+
+
 
