--- a/client/src/styles/Nav.css
+++ b/client/src/styles/Nav.css
@@ -1,14 +1,45 @@
+@media only screen and (min-width: 600px) {
+  .nav__menu {
+    text-align: right;
+    width: 300px;
+  }
+
+  .nav__link:hover {
+    color: lightslategrey;
+  }
+}
+
+.nav {
+}
+
+.nav-container {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  background-color: whitesmoke;
+}
+
 .nav__menu {
-  text-align: right;
-  width: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
   list-style: none;
 }
 
-.nav__link {
-  color: black;
-  text-decoration: none;
+.nav {
+  width: 100%;
 }
 
-.nav__link:hover {
-  color: lightslategrey;
+.nav__li {
+  width: 70px;
+}
+
+.nav__link {
+  font-size: 30px;
+  color: black;
+  text-decoration: none;
 }
