--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -27,7 +27,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: whitesmoke;
+  background-color: #758BFD;
   width: 100%;
   z-index: 1;
 }
