--- a/client/src/styles/Podcast.css
+++ b/client/src/styles/Podcast.css
@@ -5,9 +5,11 @@
   flex-direction: column;
   width: 100%;
   font-family: 'Barlow', sans-serif;
+  margin-top: 0px;
 }
 
 img {
+  max-width: 375px;
   margin: 0;
   width: 100%;
 }
@@ -28,15 +30,23 @@ img {
   height: 30px;
   width: 30px;
   font-size: 30px;
-  color: green;
+  color: #68A357;
   margin: 0px 20px 0px 20px;
+}
+
+.podcast__button--add:active {
+  color: lightslategrey;
+}
+
+.podcast__button--add:hover {
+  color: lightslategrey;
 }
 
 .podcast__button--icon--remove {
   height: 30px;
   width: 30px;
   font-size: 30px;
-  color: red;
+  color: #E71D36;
   margin: 0px 20px 0px 20px;
 }
 
@@ -52,7 +62,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-bottom: 100px; */
 }
 
 .episode-pagination-container {
@@ -65,4 +74,8 @@ img {
   align-items: center;
   text-align: right;
   margin-left: 200px;
+}
+
+.list-container {
+  margin-top: 60px;
 }
