--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@400;700&family=Baloo+2&family=Gideon+Roman&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -6,6 +8,6 @@ body {
   margin: 0 auto;
 }
 
-html {
+/* html {
   width: 100vw;
-}
+} */
