--- a/client/src/stylesheets/Nav.css
+++ b/client/src/stylesheets/Nav.css
@@ -7,9 +7,10 @@
     justify-content: flex-end;
     align-items: center;
     border-bottom: 1px solid rgb(32, 32, 32);
-    position: absolute;
+    position: fixed;
     width: 100%;
     top: 0;
+    z-index: 1;
 }
 
 .nav__menu {
