--- a/client/src/stylesheets/Header.css
+++ b/client/src/stylesheets/Header.css
@@ -22,3 +22,11 @@
 .header__logo {
     margin-right: 10px;
 }
+
+.my_list_header {
+    padding-bottom: 20px;
+}
+
+.my_list_title {
+    font-size: 35px;
+}  
